k8s-examples/nginx-alb/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "nginx-deployment"
  namespace: "microservice"
spec:
  selector:
    matchLabels:
      app: "nginx"
  replicas: 2
  template:
    metadata:
      labels:
        app: "nginx"
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: "nginx"
        ports:
        - containerPort: 80
