k8s-examples/nginx-alb/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "nginx-service"
  namespace: "microservice"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "nginx"
